	- the "moa redraw 8-bit british vintage colour management" release.
	- NOTICE: this release updates terminfo.
	- fix pixel droppings on overdraw when a secondary core font has the
          same height but different ascent.
        - implement cvvis in terminfo as blinking cursor, to distinguish it
          from cnorm (emacs uses cvvis which is commonly a blinking cursor).
	- add DECSCUSR xterm extension to set the cursor to a vertical bar.
	- add 'extension:string' action, and associated on_action perl
	  hook, for keysym resources that invokes actions provided by
	  perl extensions. The 'perl:string' action and
	  on_user_command hook are deprecated but still supported.
	- add 'builtin-string' action for keysym resources that restores string
	  mappings for keys that have predefined actions in urxvt.
	- add -k option to urxvtc for killing the daemon process.
	- add -dockapp option to make the wm treat urxvt as a dockapp.
	- add -mc option and multiClickTime resource to set the maximum time
	  between multi-click select events (patch by Joe Peterson).
	- new 'eval' extension to evaluate arbitrary perl code with keysym
	  bindings. The extension also provides methods that implement basic
	  actions, such as pasting selections and scrolling.
	- the macosx-clipboard and macosx-clipboard-native extensions have been removed.
	- kuake extension now uses the kuake.hotkey resource to specify the hotkey.
	- new 'matcher:select' mode of matcher to iterate over the matches with the keyboard.
	- the 'matcher:list' feature of matcher now honours the launcher
	  associated to a matched pattern.
	- speed-up matcher underlining on very long lines (reported by Edward Z. Yang).
	- fix up/down commands of searchable-scrollback so that they always move
	  to the previous/next logical line with a match, if any.
	- searchable-scrollback resource has been deprecated (use keysym instead).
        - extension parameter passing is deprecated (use resource mechanism instead).